# asunder

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  asunder.desktop  asunder.glade  asunder.gladep  asunder.xcf  configure  configure.in  meson.build
data/: asunder.desktop  meson.build
po/: LINGUAS  Makefile.in.in  af.po  am.po  an.po  ar.po  as.po  asunder.pot  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs_BA.po  ca.po  count.sh  cs.po  cy.po  da.po  de.po  dz.po  el.po  eo.po  es.po  eu.po  fa.po  ff.po  fi.po  fo.po  fr.po  fy.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  ht.po  (+68 more)
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  completion.c  interface.c  interface.h  main.c  main.h  meson.build  prefs.c  prefs.h  support.c  support.h  threads.c  threads.h  util.c  util.h  wrappers.c  wrappers.h
syslogng/: Makefile
